# flask-htmx-example

./: .gitignore  README.md  dev_requirements.txt  pyproject.toml
src/HtmxBlog/: __init__.py  auth.py  blog.py  db.py
src/HtmxBlog/static/: htmx.min.js
src/HtmxBlog/templates/: base.html
src/HtmxBlog/templates/auth/: login.html  register.html
src/HtmxBlog/templates/blog/: create.html  index.html  posts.html  update.html
